[package]
name = "zen_atc"
version = "0.1.0"
edition = "2021"
authors = [ "Isaiah R. <draqonfyre@yahoo.com>" ]
description = "Air Traffic Control game based on the FreeBSD version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.12.0"
rand = "0.8.5"
ratatui = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
